fix the teamname overflowing

--- a/src/components/Node/Node.css
+++ b/src/components/Node/Node.css
@@ -1,69 +1,68 @@
-.node{
-    padding: 0px 0px;
-    margin-top: 10px;
-    background-color: #006791;
-    border-radius: 5px;     
-    display: inline-block;
-    max-width: 200px;
-    text-align: center;
-    max-height: 50px;
-   font-size: 0.7vw;
-   box-shadow: rgba(0, 0, 0, 0.16) 0px 1px 4px;
-   cursor: pointer;
-   color: white;
+.node {
+  padding: 0px 0px;
+  margin-top: 10px;
+  background-color: #006791;
+  border-radius: 5px;
+  display: inline-block;
+  max-width: 200px;
+  text-align: center;
+  max-height: 50px;
+  font-size: 0.7vw;
+  box-shadow: rgba(0, 0, 0, 0.16) 0px 1px 4px;
+  cursor: pointer;
+  color: white;
 }
 .node2 {
-    padding: 0px 0;
-    background-color: #006791;
-    border-radius: 5px;
-    display: inline-block;
-    max-width: 200px;
-    text-align: center;
-    max-height: 50px;
-    font-size: 0.7vw;
-    box-shadow: rgba(0, 0, 0, 0.16) 0px 1px 4px;
-    cursor: pointer;
-    color: white;
+  padding: 0px 0;
+  background-color: #006791;
+  border-radius: 5px;
+  display: inline-block;
+  max-width: 200px;
+  text-align: center;
+  max-height: 50px;
+  font-size: 0.7vw;
+  box-shadow: rgba(0, 0, 0, 0.16) 0px 1px 4px;
+  cursor: pointer;
+  color: white;
 }
 
-
-.text{
-    cursor: pointer;
-    font-size: 0.5vw;
+.text {
+  cursor: pointer;
+  font-size: 0.4vw;
 }
 
-.text-top{
-    margin-top: 5px;
+.text-top {
+  margin-top: 5px;
 }
 
-.text-teamname{
-    font-weight: bold;
+.text-teamname {
+  font-weight: bold;
 }
 
 ::-webkit-scrollbar {
-    width: 5px;
+  width: 5px;
 }
 ::-webkit-scrollbar-track {
-    background: #3a7879;
-    border-radius: 10px;
+  background: #3a7879;
+  border-radius: 10px;
 }
 ::-webkit-scrollbar-thumb {
-    background: #C8C8C8;
-    border-radius: 10px;
+  background: #c8c8c8;
+  border-radius: 10px;
 }
 
-@media only screen and  (max-width:1024px){
-    .text {
-            font-size: 0.7vw;
-        }
+@media only screen and (max-width: 1024px) {
+  .text {
+    font-size: 0.4vw;
+  }
 }
 
-@media only screen and (width:2560px)
-{
-.node{
-    font-size: 0.1vw;
-}
-.text-top{
+@media only screen and (width: 2560px) {
+  .node {
+    font-size: 0.01vw;
+    min-height: 100px;
+  }
+  .text-top {
     margin-top: 3px;
-}
+  }
 }
